--- a/getproducts.html
+++ b/getproducts.html
@@ -56,7 +56,7 @@
 				<h3>Honey Almond Skin Softening
 				Creamy Body Wash</h3>
 		
-				<img src="img/Product_1.2.jpg">
+				<img src="img/product_1.2.jpg">
 
 				<div class="container">
 					<p1>16 fl oz Wash 16 fl oz. Honey and almond oils with powdered oatmeal
@@ -75,7 +75,7 @@
 				<h3>Sea Minerals Skin Smoothing
 				Bath & Shower Gel</h3>
 		
-				<img src="img/Product_1.1.jpg">
+				<img src="img/product_1.1.jpg">
 
 				<div class="container">
 					<p1>16 fl oz.
