--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
 
 	<p>2017 &copy; Yardley London - Lomanead, Inc</p>
 	<a href="policy.html">PRIVACY POLICY</a>
-	<a href="terms & conditions.html">TERMS & CONDITIONS</a>
-	<a name="end"></a>
+	<a href="terms & conditions.html">TERMS &amp; CONDITIONS</a>
 
 <div class="clearfix"></div>
 
